<resources>
    <string name="app_name">Strength</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="start">Start</string>
    <string name="track">Track</string>
    <string name="log">Log</string>
    <string name="run_start">Run</string>
    <string name="Percentage1">percentage1</string>
    <string name="Percentage2">percentage2</string>
    <string name="Percentage3">percentage3</string>
    <string name="Progress1">progress1</string>
    <string name="Progress2">progress2</string>
    <string name="Progress3">progress3</string>
</resources>
