<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PROGRESS STATISTICS"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/graph1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:layout_column="1" />
            <TextView
                android:text="@string/Percentage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="2" />
            <TextView
                android:text="@string/Progress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/graph2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:layout_column="1" />
            <TextView
                android:text="@string/Percentage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="2" />
            <TextView
                android:text="@string/Progress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/graph3"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:layout_column="1" />
            <TextView
                android:text="@string/Percentage3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="2" />
            <TextView
                android:text="@string/Progress3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="3" />
        </TableRow>
    </TableLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:background="@drawable/blue_button"
            android:layout_height="50dp"
            android:layout_width="30dp"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:text="@string/start"
            style="@style/button_text"/>

        <Button
            android:background="@drawable/blue_button"
            android:layout_height="50dp"
            android:layout_width="30dp"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:text="@string/track"
            android:textColor="#ffffff"
            style="@style/button_text"/>

        <Button
            android:background="@drawable/blue_button"
            android:layout_height="50dp"
            android:layout_width="30dp"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:text="@string/log"
            style="@style/button_text"/>

    </LinearLayout>

</RelativeLayout>