<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#000000">

    <com.hackrice.strength.MyCustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <Button
        android:background="@drawable/blue_button"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:text="@string/start"
        android:id="@+id/btn_start"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        style="@style/button_text"/>

    <Button
        android:background="@drawable/blue_button"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:text="@string/track"
        android:layout_margin="20dp"
        android:id="@+id/btn_track"
        android:layout_below="@+id/btn_start"
        android:layout_centerHorizontal="true"
        style="@style/button_text"/>

    <Button
        android:background="@drawable/blue_button"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:text="@string/log"
        android:id="@+id/btn_log"
        android:layout_below="@+id/btn_track"
        android:layout_centerHorizontal="true"
        style="@style/button_text"/>
</RelativeLayout>
